--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             crossorigin="anonymous"
     />
     <!-- custom CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Vanilla Js </title>
 </head>
 <body>
@@ -62,6 +62,6 @@
     </div>
 </main>
 
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
