--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
             <button class="btn btn-success" data-name="add-btn">Add</button>
         </div>
     </div>
-
     <div class="col-4">
         <h3>No Status </h3>
-        <ul class="list-group" data-name="todos-list">
+        <ul class="list-group"  data-name="todos-list"  data-dismiss="modal" data-target="#exampleModal">
             <li class="list-group-item" data-id="1" draggable="true">
                 <p>drag</p>
                 <button class="btn btn-outline-danger btn-sm" data-name="remove-btn">
@@ -50,16 +49,34 @@
             </li>
         </ul>
     </div>
-
     <div class="col-4">
         <h3>In Progress</h3>
         <ul class="list-group" data-name="in-progress-list"></ul>
     </div>
-
     <div class="col-4">
         <h3>Completed</h3>
         <ul class="list-group" data-name="completed-list"></ul>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <textarea id="textareaID" class="form-control"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
 </main>
 
 <script src="js/app.js"></script>
